--- a/D1_Tab_3_Project_and_File_Setup.Rmd
+++ b/D1_Tab_3_Project_and_File_Setup.Rmd
@@ -6,7 +6,7 @@ output:
 ---
 
 #### Project and File Setup
-
+<details open><summary class='drop'>File organization</summary>
 File organization is an important part of being a good coder. Keeping code, input data, and results together in one place will protect your sanity and the sanity of the person who inherits the project. R Studio <b>projects</b> help with this. Creating a new R Studio project for each new code project makes it easier to manage settings and file paths.  
 
 Before we create a project, take a look at the <b>Console</b> tab. Notice that at the top of the console there is a folder path. That path is your current working directory.  
@@ -26,14 +26,23 @@ Note the use of forward slashes instead of back slashes for file paths. You can 
 ```
 
 Using relative paths is a helpful because the full path will be specific to your computer and likely won't work on a different computer. But there's no guarantee that everyone has the same default R working directory. This is where projects come in. Projects package all of your code, data, output, etc. into a file type that is easily transferrable to other machines regardless of file location. 
+</details>
+<br>
+<details open><summary class = 'drop'>Start a new Project</summary>
+To demonstrate the value of a project, we'll create and use one for this class. Click <b>File > New Project</b>. In the window that appears, select <b>New Directory</b>, then select <b>New Project</b>. You will be prompted for a directory name. This is the name of your project folder. For this class, call it `imd_r_intro`. Next, you'll select what folder to keep your project folder in. `Documents/R` is a good place to store all of your R projects but it's up to you. When you are done, click on <b>Create Project</b>.  
 
-Let's make a project for this class. Click <b>File > New Project</b>. In the window that appears, select <b>New Directory</b>, then select <b>New Project</b>. You will be prompted for a directory name. This is the name of your project folder. For this class, call it `imd_r_intro`. Next, you'll select what folder to keep your project folder in. `Documents/R` is a good place to store all of your R projects but it's up to you. When you are done, click on <b>Create Project</b>.  
-
-<img src = "./images/new_project1.png" alt = 'New project step 1' style = "width:4505px;">
-<img src = "./images/new_project2.png" alt = 'New project step 2' style = "width:4505px;">
-<img src = "./images/new_project3.png" alt = 'New project step 3' style = "width:4505px;">
+<details open><summary class = 'drop2'>1. Select New Directory</summary>
+<img src = "./images/new_project1.png" alt = 'New project step 1' style = "width:450px;">
+</details>
+<details open><summary class = 'drop2'>2. Select New Project </summary>
+<img src = "./images/new_project2.png" alt = 'New project step 2' style = "width:450px;">
+</details>
+<details open><summary class = 'drop2'>3. Name project imd_r_intro </summary>
+Save project to a place you can find it. Don't worry about whether the git repository box is checked or not. <br>
+<img src = "./images/new_project3.png" alt = 'New project step 3' style = "width:450px;">
+</details>
 
 
 If you successfully started a project named `imd_r_intro`, you should see it listed at the very top right of your screen. As you start new projects, you'll want to check that you're working in the right one before you start coding. Take a look at the <b>Console</b> tab again. Notice that your current working directory is now your project folder. When you look in the <b>Files</b> tab of the bottom right pane, you'll see that it also defaults to the project folder.
 
-
+</details>
